Consolidate creation of RestClient beans